# Pronostics_web

./: .env.example  .gitignore  Procfile  alembic.ini  index.html  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  football_data.py  main.py  models.py  scoring.py  stages.py
app/jobs/: sync_fixtures.py  sync_results.py
app/routes/: auth.py  home.py  matches.py  predictions.py
app/templates/: base.html  home.html  leaderboard.html  login.html  matches.html
migrations/: env.py
migrations/versions/: 4fd5ae6e5f9b_add_stage_column_to_match.py  906a8f9943d7_initial_schema.py
tests/: test_scoring.py
