[project]
name = "prono"
version = "0.1.0"
description = "Weekly football prediction pool"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.5",
    "itsdangerous>=2.2",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
